--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+	background: #144552;
+}
 
 .session-holder {
 	position: absolute;
@@ -70,8 +73,9 @@
 }
 
 #clock {
+	background: #5cb0c1;
 	position: absolute;
-	margin-top: 70px;
+	margin-top: 55px;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 50%;
